@@ -7,21 +7,15 @@
 
 package org.elasticsearch.xpack.prometheus;
 
+import org.apache.http.HttpHeaders;
 import org.apache.http.entity.ByteArrayEntity;
 import org.apache.http.entity.ContentType;
 import org.apache.http.util.EntityUtils;
 import org.elasticsearch.client.Request;
 import org.elasticsearch.client.Response;
 import org.elasticsearch.client.ResponseException;
-import org.elasticsearch.common.settings.SecureString;
-import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.common.util.concurrent.ThreadContext;
-import org.elasticsearch.test.cluster.ElasticsearchCluster;
-import org.elasticsearch.test.cluster.FeatureFlag;
-import org.elasticsearch.test.cluster.local.distribution.DistributionType;
-import org.elasticsearch.test.rest.ESRestTestCase;
+import org.elasticsearch.test.rest.ObjectPath;
 import org.elasticsearch.xpack.prometheus.proto.RemoteWrite;
-import org.junit.ClassRule;
 
 import java.io.IOException;
 import java.util.List;
@@ -29,41 +23,21 @@ import java.util.Map;
 
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.Matchers.hasKey;
 import static org.hamcrest.Matchers.hasSize;
+import static org.hamcrest.Matchers.notNullValue;
+import static org.hamcrest.Matchers.nullValue;
 
-public class PrometheusRemoteWriteRestIT extends ESRestTestCase {
-
-    private static final String USER = "test_admin";
-    private static final String PASS = "x-pack-test-password";
-    private static final String DEFAULT_DATA_STREAM = "metrics-generic.prometheus-default";
-
-    @ClassRule
-    public static ElasticsearchCluster cluster = ElasticsearchCluster.local()
-        .distribution(DistributionType.DEFAULT)
-        .user(USER, PASS, "superuser", false)
-        .setting("xpack.security.enabled", "true")
-        .setting("xpack.security.autoconfiguration.enabled", "false")
-        .setting("xpack.license.self_generated.type", "trial")
-        .setting("xpack.ml.enabled", "false")
-        .setting("xpack.watcher.enabled", "false")
-        .feature(FeatureFlag.PROMETHEUS_FEATURE_FLAG)
-        .build();
-
-    @Override
-    protected String getTestRestCluster() {
-        return cluster.getHttpAddresses();
-    }
-
-    @Override
-    protected Settings restClientSettings() {
-        String token = basicAuthHeaderValue(USER, new SecureString(PASS.toCharArray()));
-        return Settings.builder().put(super.restClientSettings()).put(ThreadContext.PREFIX + ".Authorization", token).build();
-    }
+public class PrometheusRemoteWriteRestIT extends AbstractPrometheusRestIT {
 
     public void testRemoteWriteEndpointWithEmptyRequest() throws Exception {
         RemoteWrite.WriteRequest writeRequest = RemoteWrite.WriteRequest.newBuilder().build();
         sendAndAssertSuccess(writeRequest);
+    }
+
+    public void testRemoteWriteEndpointWithEmptyBody() throws Exception {
+        sendEmptyBodyAndAssertSuccess("/_prometheus/api/v1/write");
+        sendEmptyBodyAndAssertSuccess("/_prometheus/metrics/myapp/api/v1/write");
+        sendEmptyBodyAndAssertSuccess("/_prometheus/metrics/myapp/production/api/v1/write");
     }
 
     public void testRemoteWriteIndexesGaugeMetric() throws Exception {
@@ -76,19 +50,21 @@ public class PrometheusRemoteWriteRestIT extends ESRestTestCase {
 
         sendAndAssertSuccess(writeRequest);
 
-        Map<String, Object> source = searchSingleDoc(metricName);
+        ObjectPath source = searchSingleDoc(metricName);
 
         // Verify document structure
-        assertThat(source, hasKey("@timestamp"));
-        assertThat(source.get(metricName), equalTo(42.5));
+        assertThat(source.evaluate("@timestamp"), notNullValue());
+        assertThat(source.evaluate("metrics." + metricName), equalTo(42.5));
 
         // Verify labels
-        assertLabel(source, "__name__", metricName);
-        assertLabel(source, "job", "test_job");
-        assertLabel(source, "instance", "localhost:9090");
+        assertThat(source.evaluate("labels.__name__"), equalTo(metricName));
+        assertThat(source.evaluate("labels.job"), equalTo("test_job"));
+        assertThat(source.evaluate("labels.instance"), equalTo("localhost:9090"));
 
         // Verify data_stream fields
-        assertDataStream(source, "metrics", "generic.prometheus", "default");
+        assertThat(source.evaluate("data_stream.type"), equalTo("metrics"));
+        assertThat(source.evaluate("data_stream.dataset"), equalTo("generic.prometheus"));
+        assertThat(source.evaluate("data_stream.namespace"), equalTo("default"));
     }
 
     public void testRemoteWriteIndexesCounterMetric() throws Exception {
@@ -101,9 +77,9 @@ public class PrometheusRemoteWriteRestIT extends ESRestTestCase {
 
         sendAndAssertSuccess(writeRequest);
 
-        Map<String, Object> source = searchSingleDoc(metricName);
-        assertThat(source.get(metricName), equalTo(1000.0));
-        assertLabel(source, "method", "GET");
+        ObjectPath source = searchSingleDoc(metricName);
+        assertThat(source.evaluate("metrics." + metricName), equalTo(1000.0));
+        assertThat(source.evaluate("labels.method"), equalTo("GET"));
     }
 
     public void testRemoteWriteWithMultipleTimeseriesAndSamples() throws Exception {
@@ -130,7 +106,44 @@ public class PrometheusRemoteWriteRestIT extends ESRestTestCase {
 
         List<Map<String, Object>> hits2 = searchDocs(metric2);
         assertThat(hits2, hasSize(1));
-        assertThat(hits2.get(0), hasKey(metric2));
+        assertThat(new ObjectPath(hits2.getFirst()).evaluate("metrics." + metric2), equalTo(100.0));
+    }
+
+    public void testRemoteWriteDropsNaNSamples() throws Exception {
+        long timestamp = System.currentTimeMillis();
+        String metricName = "nan_metric";
+
+        RemoteWrite.WriteRequest writeRequest = RemoteWrite.WriteRequest.newBuilder()
+            .addTimeseries(timeSeries(metricName, Map.of("job", "test_job"), sample(Double.NaN, timestamp)))
+            .build();
+
+        sendAndAssertSuccess(writeRequest);
+        assertFalse("NaN-only request should not create a data stream", dataStreamExists(DEFAULT_DATA_STREAM));
+    }
+
+    public void testRemoteWriteDropsNaNButKeepsValidSamples() throws Exception {
+        long timestamp = System.currentTimeMillis();
+        String metricName = "nan_mixed_metric";
+
+        RemoteWrite.WriteRequest writeRequest = RemoteWrite.WriteRequest.newBuilder()
+            .addTimeseries(
+                timeSeries(
+                    metricName,
+                    Map.of("job", "test_job"),
+                    sample(Double.NaN, timestamp - 1000),
+                    sample(42.5, timestamp),
+                    sample(Double.POSITIVE_INFINITY, timestamp + 1000),
+                    sample(Double.NEGATIVE_INFINITY, timestamp + 2000)
+                )
+            )
+            .build();
+
+        sendAndAssertSuccess(writeRequest);
+        assertTrue("Data stream should exist for valid samples", dataStreamExists(DEFAULT_DATA_STREAM));
+
+        List<Map<String, Object>> docs = searchDocs(metricName);
+        assertThat("Only finite samples should be indexed", docs, hasSize(1));
+        assertThat(new ObjectPath(docs.getFirst()).evaluate("metrics." + metricName), equalTo(42.5));
     }
 
     public void testRemoteWriteMissingNameLabelReturns400() throws Exception {
@@ -148,18 +161,111 @@ public class PrometheusRemoteWriteRestIT extends ESRestTestCase {
 
     public void testRemoteWriteWithCustomDataset() throws Exception {
         String metricName = "custom_dataset_metric";
-        sendAndAssertSuccess(simpleWriteRequest(metricName), "/_prometheus/myapp/api/v1/write");
+        sendAndAssertSuccess(simpleWriteRequest(metricName), "/_prometheus/metrics/myapp/api/v1/write");
 
-        Map<String, Object> source = searchSingleDoc("metrics-myapp.prometheus-default", metricName);
-        assertDataStream(source, "metrics", "myapp.prometheus", "default");
+        ObjectPath source = searchSingleDoc("metrics-myapp.prometheus-default", metricName);
+        assertThat(source.evaluate("data_stream.type"), equalTo("metrics"));
+        assertThat(source.evaluate("data_stream.dataset"), equalTo("myapp.prometheus"));
+        assertThat(source.evaluate("data_stream.namespace"), equalTo("default"));
     }
 
     public void testRemoteWriteWithCustomDatasetAndNamespace() throws Exception {
         String metricName = "custom_ns_metric";
-        sendAndAssertSuccess(simpleWriteRequest(metricName), "/_prometheus/myapp/production/api/v1/write");
+        sendAndAssertSuccess(simpleWriteRequest(metricName), "/_prometheus/metrics/myapp/production/api/v1/write");
 
-        Map<String, Object> source = searchSingleDoc("metrics-myapp.prometheus-production", metricName);
-        assertDataStream(source, "metrics", "myapp.prometheus", "production");
+        ObjectPath source = searchSingleDoc("metrics-myapp.prometheus-production", metricName);
+        assertThat(source.evaluate("data_stream.type"), equalTo("metrics"));
+        assertThat(source.evaluate("data_stream.dataset"), equalTo("myapp.prometheus"));
+        assertThat(source.evaluate("data_stream.namespace"), equalTo("production"));
+    }
+
+    public void testRemoteWriteSanitizesInvalidCustomDatasetInPath() throws Exception {
+        String metricName = "invalid_dataset_metric";
+        sendAndAssertSuccess(simpleWriteRequest(metricName), "/_prometheus/metrics/my-app/api/v1/write");
+
+        ObjectPath source = searchSingleDoc("metrics-my_app.prometheus-default", metricName);
+        assertThat(source.evaluate("data_stream.dataset"), equalTo("my_app.prometheus"));
+        assertThat(source.evaluate("data_stream.namespace"), equalTo("default"));
+    }
+
+    public void testRemoteWriteSanitizesInvalidCustomNamespaceInPath() throws Exception {
+        String metricName = "invalid_namespace_metric";
+        sendAndAssertSuccess(simpleWriteRequest(metricName), "/_prometheus/metrics/myapp/foo:bar/api/v1/write");
+
+        ObjectPath source = searchSingleDoc("metrics-myapp.prometheus-foo_bar", metricName);
+        assertThat(source.evaluate("data_stream.dataset"), equalTo("myapp.prometheus"));
+        assertThat(source.evaluate("data_stream.namespace"), equalTo("foo_bar"));
+    }
+
+    public void testRemoteWriteLabelRoutingOverridesPathDatasetAndNamespace() throws Exception {
+        long timestamp = System.currentTimeMillis();
+        String metricName = "label_route_metric";
+        RemoteWrite.WriteRequest writeRequest = RemoteWrite.WriteRequest.newBuilder()
+            .addTimeseries(
+                timeSeries(
+                    metricName,
+                    Map.of("data_stream_dataset", "fromlabels", "data_stream_namespace", "labelns", "job", "prometheus"),
+                    sample(1.0, timestamp)
+                )
+            )
+            .build();
+
+        // Path would target myapp/production; labels must win
+        sendAndAssertSuccess(writeRequest, "/_prometheus/metrics/myapp/production/api/v1/write");
+
+        ObjectPath source = searchSingleDoc("metrics-fromlabels.prometheus-labelns", metricName);
+        assertThat(source.evaluate("data_stream.dataset"), equalTo("fromlabels.prometheus"));
+        assertThat(source.evaluate("data_stream.namespace"), equalTo("labelns"));
+        assertThat(source.evaluate("labels.job"), equalTo("prometheus"));
+    }
+
+    public void testRemoteWriteLabelRoutingPartialOverrideUsesPathForUnsetFields() throws Exception {
+        long timestamp = System.currentTimeMillis();
+        String metricName = "partial_label_route_metric";
+        RemoteWrite.WriteRequest writeRequest = RemoteWrite.WriteRequest.newBuilder()
+            .addTimeseries(
+                timeSeries(metricName, Map.of("data_stream_namespace", "only_ns_from_label", "job", "j"), sample(1.0, timestamp))
+            )
+            .build();
+
+        sendAndAssertSuccess(writeRequest, "/_prometheus/metrics/pathdataset/default/api/v1/write");
+
+        ObjectPath source = searchSingleDoc("metrics-pathdataset.prometheus-only_ns_from_label", metricName);
+        assertThat(source.evaluate("data_stream.dataset"), equalTo("pathdataset.prometheus"));
+        assertThat(source.evaluate("data_stream.namespace"), equalTo("only_ns_from_label"));
+    }
+
+    public void testRemoteWriteSanitizesInvalidDatasetInLabel() throws Exception {
+        long timestamp = System.currentTimeMillis();
+        String metricName = "bad_label_dataset";
+        RemoteWrite.WriteRequest writeRequest = RemoteWrite.WriteRequest.newBuilder()
+            .addTimeseries(timeSeries(metricName, Map.of("data_stream_dataset", "bad:dataset", "job", "x"), sample(1.0, timestamp)))
+            .build();
+
+        sendAndAssertSuccess(writeRequest);
+
+        ObjectPath source = searchSingleDoc("metrics-bad_dataset.prometheus-default", metricName);
+        assertThat(source.evaluate("data_stream.dataset"), equalTo("bad_dataset.prometheus"));
+        assertThat(source.evaluate("labels.job"), equalTo("x"));
+    }
+
+    public void testRemoteWriteRoutingLabelsNotDuplicatedInLabelsObject() throws Exception {
+        long timestamp = System.currentTimeMillis();
+        String metricName = "no_dup_routing_labels";
+        RemoteWrite.WriteRequest writeRequest = RemoteWrite.WriteRequest.newBuilder()
+            .addTimeseries(
+                timeSeries(
+                    metricName,
+                    Map.of("data_stream_dataset", "nodup", "data_stream_namespace", "ns", "job", "x"),
+                    sample(1.0, timestamp)
+                )
+            )
+            .build();
+        sendAndAssertSuccess(writeRequest);
+
+        ObjectPath source = searchSingleDoc("metrics-nodup.prometheus-ns", metricName);
+        assertThat(source.evaluate("labels.data_stream_dataset"), nullValue());
+        assertThat(source.evaluate("labels.data_stream_namespace"), nullValue());
     }
 
     // --- helpers ---
@@ -179,93 +285,38 @@ public class PrometheusRemoteWriteRestIT extends ESRestTestCase {
         return builder.build();
     }
 
-    private static RemoteWrite.Label label(String name, String value) {
-        return RemoteWrite.Label.newBuilder().setName(name).setValue(value).build();
-    }
-
-    private static RemoteWrite.Sample sample(double value, long timestamp) {
-        return RemoteWrite.Sample.newBuilder().setValue(value).setTimestamp(timestamp).build();
-    }
-
     private void sendAndAssertSuccess(RemoteWrite.WriteRequest writeRequest) throws IOException {
         sendAndAssertSuccess(writeRequest, "/_prometheus/api/v1/write");
     }
 
     private void sendAndAssertSuccess(RemoteWrite.WriteRequest writeRequest, String endpoint) throws IOException {
         Request request = new Request("POST", endpoint);
-        request.setEntity(new ByteArrayEntity(writeRequest.toByteArray(), ContentType.create("application/x-protobuf")));
+        request.setEntity(new ByteArrayEntity(snappyEncode(writeRequest.toByteArray()), ContentType.create("application/x-protobuf")));
+        request.setOptions(request.getOptions().toBuilder().addHeader(HttpHeaders.CONTENT_ENCODING, "snappy").build());
+        addWriteAuth(request);
         Response response = client().performRequest(request);
         assertThat(response.getStatusLine().getStatusCode(), equalTo(204));
     }
 
     private String sendAndAssertBadRequest(RemoteWrite.WriteRequest writeRequest) throws IOException {
-        Request request = new Request("POST", "/_prometheus/api/v1/write");
-        request.setEntity(new ByteArrayEntity(writeRequest.toByteArray(), ContentType.create("application/x-protobuf")));
+        return sendAndAssertBadRequest(writeRequest, "/_prometheus/api/v1/write");
+    }
+
+    private String sendAndAssertBadRequest(RemoteWrite.WriteRequest writeRequest, String endpoint) throws IOException {
+        Request request = new Request("POST", endpoint);
+        request.setEntity(new ByteArrayEntity(snappyEncode(writeRequest.toByteArray()), ContentType.create("application/x-protobuf")));
+        request.setOptions(request.getOptions().toBuilder().addHeader(HttpHeaders.CONTENT_ENCODING, "snappy").build());
+        addWriteAuth(request);
         ResponseException e = expectThrows(ResponseException.class, () -> client().performRequest(request));
         assertThat(e.getResponse().getStatusLine().getStatusCode(), equalTo(400));
         return EntityUtils.toString(e.getResponse().getEntity());
     }
 
-    /**
-     * Searches for all indexed documents matching the given metric name and returns their _source maps.
-     */
-    private List<Map<String, Object>> searchDocs(String metricName) throws IOException {
-        return searchDocs(DEFAULT_DATA_STREAM, metricName);
+    private void sendEmptyBodyAndAssertSuccess(String endpoint) throws IOException {
+        Request request = new Request("POST", endpoint);
+        addWriteAuth(request);
+        Response response = client().performRequest(request);
+        assertThat(response.getStatusLine().getStatusCode(), equalTo(204));
     }
 
-    private List<Map<String, Object>> searchDocs(String dataStream, String metricName) throws IOException {
-        Request refresh = new Request("POST", "/" + dataStream + "/_refresh");
-        client().performRequest(refresh);
-
-        Request search = new Request("GET", "/" + dataStream + "/_search");
-        search.setJsonEntity(org.elasticsearch.common.Strings.format("""
-            {
-              "query": {
-                "term": {
-                  "labels.__name__": "%s"
-                }
-              }
-            }
-            """, metricName));
-        Response response = client().performRequest(search);
-        Map<String, Object> searchResult = entityAsMap(response);
-
-        @SuppressWarnings("unchecked")
-        Map<String, Object> hitsWrapper = (Map<String, Object>) searchResult.get("hits");
-        @SuppressWarnings("unchecked")
-        List<Map<String, Object>> hits = (List<Map<String, Object>>) hitsWrapper.get("hits");
-
-        return hits.stream().map(hit -> {
-            @SuppressWarnings("unchecked")
-            Map<String, Object> src = (Map<String, Object>) hit.get("_source");
-            return src;
-        }).toList();
-    }
-
-    /**
-     * Convenience method that asserts exactly one document was indexed for the given metric and returns its _source.
-     */
-    private Map<String, Object> searchSingleDoc(String metricName) throws IOException {
-        return searchSingleDoc(DEFAULT_DATA_STREAM, metricName);
-    }
-
-    private Map<String, Object> searchSingleDoc(String dataStream, String metricName) throws IOException {
-        List<Map<String, Object>> docs = searchDocs(dataStream, metricName);
-        assertThat(docs, hasSize(1));
-        return docs.get(0);
-    }
-
-    @SuppressWarnings("unchecked")
-    private static void assertDataStream(Map<String, Object> source, String type, String dataset, String namespace) {
-        Map<String, Object> dataStream = (Map<String, Object>) source.get("data_stream");
-        assertThat(dataStream.get("type"), equalTo(type));
-        assertThat(dataStream.get("dataset"), equalTo(dataset));
-        assertThat(dataStream.get("namespace"), equalTo(namespace));
-    }
-
-    @SuppressWarnings("unchecked")
-    private static void assertLabel(Map<String, Object> source, String labelName, String expectedValue) {
-        Map<String, Object> labels = (Map<String, Object>) source.get("labels");
-        assertThat(labels.get(labelName), equalTo(expectedValue));
-    }
 }
